# yap-orange

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  docker-compose.yml  package-lock.json
.forgejo/workflows/: ci.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/yap-bench/: Cargo.toml
crates/yap-bench/src/: data.rs  lib.rs  results.rs  runner.rs
crates/yap-bench/src/suites/: edges.rs  edit.rs  hierarchy.rs  links.rs  mod.rs  namespace.rs  read.rs  search.rs  write.rs
crates/yap-cli/: Cargo.toml
crates/yap-cli/src/: client.rs  main.rs
crates/yap-core/: Cargo.toml
crates/yap-core/proptest-regressions/: content.txt  links.txt
crates/yap-core/src/: bootstrap.rs  content.rs  error.rs  export.rs  file_store.rs  hash.rs  lib.rs  links.rs  models.rs  seed.rs  store.rs
crates/yap-core/tests/: benchmarks.rs  export_tests.rs
crates/yap-desktop/: Cargo.toml  tauri.conf.json
crates/yap-desktop/capabilities/: default.json
crates/yap-desktop/src/: lib.rs  main.rs
crates/yap-server/: Cargo.toml
crates/yap-server-wasm/: Cargo.toml
crates/yap-server-wasm/src/: lib.rs
crates/yap-server/src/: api.rs  lib.rs  log_buffer.rs  main.rs
crates/yap-server/tests/: api_tests.rs  export_roundtrip_tests.rs  startup_tests.rs
crates/yap-store-pg/: Cargo.toml
crates/yap-store-pg/src/: lib.rs  rows.rs
crates/yap-store-pg/tests/: benchmarks.rs  export_tests.rs
crates/yap-store-sqlite/: Cargo.toml
crates/yap-store-sqlite/src/: lib.rs  rows.rs
crates/yap-store-sqlite/tests/: export_tests.rs
crates/yap-store-tests/: Cargo.toml
crates/yap-store-tests/src/: lib.rs
crates/yap-store-wasm/: Cargo.toml
crates/yap-store-wasm/src/: db.rs  lib.rs
docs/: api.md  architecture.md  cli-cheat-sheet.md  export-format.md  future.md  seeding.md  testing.md
fixtures/: sample-recipes.json  sample-soups-subtree.json  tutorial.json
guide/: book.toml
guide/src/: SUMMARY.md  deployment-modes.md  installation.md  introduction.md
guide/src/cli/: blocks.md  custom-types.md  database.md  import-export.md  namespaces.md  overview.md  search-links.md
guide/src/concepts/: content-storage.md  data-model.md  export-format.md
guide/src/web-ui/: custom-types.md  editing.md  graph.md  import-export.md  keyboard-shortcuts.md  layout.md  navigation.md  properties.md  settings.md  wiki-links.md
guide/src/workflows/: creating-blocks.md  editing-content.md  expand-collapse.md  keyboard-editing.md  managing-blocks.md  navigating.md  organizing-blocks.md  selecting-blocks.md
migrations/: 001_initial_schema.sql
migrations/postgres/: 002_content_type_index.sql  003_name_to_properties.sql
migrations/sqlite/: 001_initial_schema.sql  002_name_to_properties.sql
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
web/e2e/: accessibility.test.ts  content-and-links.test.ts  context-menu-and-indent.test.ts  create-block.test.ts  drag-drop.test.ts  edit-mode-actions.test.ts  expand-collapse.test.ts  keyboard-navigation.test.ts  multi-select.test.ts  navigation.test.ts  outliner-actions.test.ts  rename-and-sidebar.test.ts  screenshot.ts  smoke.test.ts
web/public/: sw.js  wasm-worker.js
web/src/: App.svelte  app.css  main.ts  sw-register.ts
web/src/lib/: Backlinks.svelte  BenchmarkPanel.svelte  BlockEditor.svelte  Bookmarks.svelte  ContentRenderer.svelte  ContextMenu.svelte  DebugLog.svelte  DockLayout.svelte  FloatingEdge.svelte  GraphFlow.svelte  GraphPreview.svelte  GroupHeaderMenu.svelte  ImportExport.svelte  Outliner.svelte  OutlinerNode.svelte  Properties.svelte  QuickSwitcher.svelte  Sidebar.svelte  Toast.svelte  api.ts  appState.svelte.ts  blobUrl.ts  blockTree.svelte.ts  bookmarkStore.svelte.ts  collide.ts  content.test.ts  content.ts  contextMenuActions.ts  dockviewActions.svelte.ts  fileDrop.ts  filePicker.ts  fileUpload.test.ts  fileUpload.ts  floatingEdgeUtils.ts  outlinerActions.ts  outlinerStore.svelte.ts  panelHistory.svelte.ts  position.test.ts  position.ts  router.svelte.ts  (+6 more)
web/src/lib/editor/: completion.ts  renderMarkdown.ts  theme.ts  wikilinks.ts
web/src/lib/views/: EmbedRenderer.svelte  EntryView.svelte  FileView.svelte  ImageView.svelte  PdfView.svelte  SchemaView.svelte  SettingsView.svelte  TodoView.svelte  TypeRegistryView.svelte  typeViewRegistry.test.ts  typeViewRegistry.ts
web/src/lib/views/fields/: BooleanField.svelte  DateField.svelte  EnumField.svelte  NumberField.svelte  RefField.svelte  StringField.svelte  TextField.svelte
xtask/: Cargo.toml
xtask/src/: main.rs
