[workspace]
resolver = "2"
members = [
    "crates/yap-core",
    "crates/yap-store-pg",
    "crates/yap-store-sqlite",
    "crates/yap-server",
    "crates/yap-cli",
    "crates/yap-desktop",
    "crates/yap-store-tests",
    "crates/yap-bench",
    "xtask",
]

# WASM-only crates — excluded from default workspace builds because they
# depend on wasm32-unknown-unknown targets (sqlite-wasm-rs, wasm-bindgen).
# Build them separately: wasm-pack build crates/yap-server-wasm --target web
exclude = [
    "crates/yap-store-wasm",
    "crates/yap-server-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Dustin"]
license = "GPL-3.0-or-later"
repository = "https://git.rcr.pub/dustin/yap-orange"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
needless_pass_by_value = "warn"
cloned_instead_of_copied = "warn"
manual_strip = "warn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# UUID v7
uuid = { version = "1", features = ["v7", "serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web framework (server)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP client (for CLI)
reqwest = { version = "0.12", features = ["json"] }

# Random (for xtask seed)
rand = "0.9"

# Fractional indexing for CRDT-friendly ordering
fractional_index = "2"

# Markdown parsing
comrak = { version = "0.36", default-features = false, features = ["shortcodes"] }

# Testing
tokio-test = "0.4"

# OpenAPI
utoipa = { version = "5", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Desktop (Tauri)
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
pg-embed = { version = "1", default-features = false, features = ["rt_tokio_migrate"] }
dirs = "6"
