[package]
name = "yap-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "yap"
path = "src/main.rs"

[dependencies]
yap-core = { path = "../yap-core" }
tokio.workspace = true
clap.workspace = true
reqwest.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
colored = "2"
dialoguer = "0.11"
sqlx.workspace = true
urlencoding = "2"
atty = "0.2"

[dev-dependencies]
tokio-test.workspace = true
