[package]
name = "yap-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["openapi", "tokio", "comrak"]
openapi = ["dep:utoipa"]
tokio = ["dep:tokio"]
comrak = ["dep:comrak"]

[dependencies]
tokio = { workspace = true, optional = true }
async-trait = "0.1"
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
sha2 = "0.10"
hex = "0.4"
comrak = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }

[dev-dependencies]
tokio-test.workspace = true
tokio = { workspace = true, features = ["full"] }
proptest = "1"
tempfile = "3"
