[package]
name = "yap-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "yap_desktop"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "yap-desktop"
path = "src/main.rs"

[features]
default = ["sqlite"]
postgres = ["yap-server/postgres", "dep:yap-store-pg", "dep:pg-embed"]
sqlite = ["yap-server/sqlite", "dep:yap-store-sqlite"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
yap-server = { path = "../yap-server", default-features = false, features = ["http-layers", "server", "tokio"] }
yap-store-pg = { path = "../yap-store-pg", optional = true }
yap-store-sqlite = { path = "../yap-store-sqlite", optional = true }
yap-core = { path = "../yap-core" }

tauri.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

pg-embed = { workspace = true, optional = true }
dirs.workspace = true
axum.workspace = true
