[package]
name = "yap-server-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Dustin"]
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
yap-core = { path = "../yap-core", default-features = false }
yap-server = { path = "../yap-server", default-features = false, features = ["bench"] }
yap-store-wasm = { path = "../yap-store-wasm" }
sqlite-wasm-rs = "0.5"
sqlite-wasm-vfs = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Request", "Response", "Headers", "ReadableStream"] }
axum = { version = "0.8", default-features = false }
http = "1.0"
tower-service = "0.3"
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
