[package]
name = "yap-store-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Dustin"]
license = "GPL-3.0-or-later"

[dependencies]
yap-core = { path = "../yap-core", default-features = false }
sqlite-wasm-rs = "0.5"
sqlite-wasm-vfs = "0.2"
uuid = { version = "1", features = ["v7", "serde", "js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
fractional_index = "2"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
